@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvmdk],
- [20121127],
+ [20121128],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
